# t3Connect

./: Cargo.toml
client-ui/: index.html  package-lock.json  package.json
client-ui/src/: App.css  App.tsx
client-ui/src-tauri/: 2  Cargo.toml  tauri.conf.json  test.rs
client-ui/src-tauri/icons/: icon.icns
client-ui/src-tauri/src/: color.rs  encoder.rs  input.rs  lib.rs  main.rs  signaling.rs  webrtc.rs
core-engine/: Cargo.toml
core-engine/src/: encoder.rs  input.rs  main.rs  signaling.rs  webrtc.rs
signaling-server/: Cargo.toml
signaling-server/src/: main.rs
t3-connect-website/: next.config.ts  package-lock.json  package.json
t3-connect-website/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
t3-connect-website/src/app/components/: ParticleBg.tsx
t3-signaling-server/: Cargo.toml  Dockerfile
t3-signaling-server/src/: main.rs
