[package]
name = "client-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
bytes = "1.12.1"
enigo = "0.6.1"
futures-util = "0.3.33"
rand = "0.10.2"
tokio = { version = "1.53.0", features = ["full"] }
tokio-tungstenite = "0.30.0"
webrtc = "0.17.1"
windows = { version = "0.62.2", features = ["Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D11", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Com", "Win32_Graphics_Direct3D", "Win32_Media_MediaFoundation", "Win32_Media_KernelStreaming", "Win32_Media", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Gdi", "Win32_Media_DirectShow"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.7.0", features = ["cors"] }
